# reflux-tg-bot

./: .gitignore  README.md  dashboard.md  env.example  master-prompt.md  pyproject.toml
app/: __init__.py  main.py
app/bot/: __init__.py  flow_common.py  handlers.py  handlers_flows.py  keyboards.py  text.py
app/core/: __init__.py  config.py  i18n.py  state.py  timeparse.py
app/dashboard/: templates.py
app/dashboard/static/: dashboard.js
app/db/: __init__.py  models.py  session.py
app/services/: dashboard_auth.py  dashboard_codes.py  dashboard_metrics.py  exporting.py  logging.py  meal_taxonomy.py  medications.py  openai_client.py  reports.py  taxonomy_index.py  users.py
scripts/: analyze_taxonomy.py  backfill_meal_categories.py  init_db.py
